<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_add_new_product"
            android:icon="@drawable/baseline_add_24"
            android:title="@string/add_new_product_title"/>

        <item
            android:id="@+id/nav_graphs"
            android:icon="@drawable/baseline_bar_chart_24"
            android:title="@string/graphs"/>

        <item
            android:id="@+id/nav_archived_products"
            android:icon="@drawable/baseline_archive_24"
            android:title="@string/archived_products"/>
    </group>
</menu>