<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout_add_product"
    android:layout_width="match_parent"
    android:layoutDirection="ltr"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <!-- Main Content -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_add_product"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/lines">

        <!-- Include the Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layoutDirection="ltr"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <!-- ScrollView containing the main content -->
        <ScrollView
            android:id="@+id/main_add_product_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:padding="16dp"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/lines"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <!-- Add New Product TextView -->
                <TextView
                    android:id="@+id/add_product_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_new_product_title"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="16dp" />

                <!-- Avatar -->
                <ImageView
                    android:contentDescription="@string/add_new_product_image"
                    android:id="@+id/add_product_avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_add_a_photo_24"
                    android:layout_marginBottom="16dp" />

                <ImageView
                    android:id="@+id/upload_avatar"
                    android:contentDescription="@string/upload_new_product_image"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_upload_24"
                    android:layout_marginBottom="16dp" />

                <!-- Error Label for Avatar -->
                <TextView
                    android:id="@+id/error_label_avatar_missing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:text="@string/error_missing_avatar" />

                <!-- Label for Product Title -->
                <TextView
                    android:id="@+id/label_product_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_title_edit_text_hint"
                    android:textColor="@color/white"
                    android:layout_marginBottom="4dp" />

                <!-- EditText for Product Title -->
                <EditText
                    android:id="@+id/add_edit_text_product_title"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColorHint="@color/white"
                    android:hint="@string/title_edit_text_hint"
                    android:background="@drawable/edit_text_border"
                    android:textColor="@color/white"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:layout_marginBottom="8dp" />

                <!-- Error Label for Product Title -->
                <TextView
                    android:id="@+id/error_label_product_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone"
                    android:text="@string/error_invalid_title" />

                <!-- Label for Product Price -->
                <TextView
                    android:id="@+id/label_product_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_price_edit_text_hint"
                    android:textColor="@color/white"
                    android:layout_marginBottom="4dp" />

                <!-- EditText for Product Price -->
                <EditText
                    android:id="@+id/add_edit_text_product_price"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColorHint="@color/white"
                    android:hint="@string/price_edit_text_hint"
                    android:background="@drawable/edit_text_border"
                    android:textColor="@color/white"
                    android:inputType="numberDecimal"
                    android:padding="8dp" />

                <!-- Error Label for Product Price -->
                <TextView
                    android:id="@+id/error_label_product_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone"
                    android:text="@string/error_invalid_price" />

                <!-- Error Label for Product Price -->
                <TextView
                    android:id="@+id/error_label_invalid_product_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone"
                    android:text="@string/error_invalid_price_invalid" />

                <!-- Label for Product Category -->
                <TextView
                    android:id="@+id/label_product_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_category_edit_text_hint"
                    android:textColor="@color/white"
                    android:layout_marginBottom="4dp" />

                <!-- EditText for Product Category -->
                <EditText
                    android:id="@+id/add_edit_text_product_category"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/category_edit_text_hint"
                    android:background="@drawable/edit_text_border"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:textColorHint="@color/white"
                    android:padding="8dp"
                    android:layout_marginBottom="8dp" />

                <!-- Error Label for Product Category -->
                <TextView
                    android:id="@+id/error_label_product_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone"
                    android:text="@string/error_invalid_category" />


                <!-- Label for Product Description -->
                <TextView
                    android:id="@+id/label_product_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_description_edit_text_hint"
                    android:textColor="@color/white"
                    android:layout_marginBottom="4dp" />

                <!-- EditText for Product Description -->
                <EditText
                    android:id="@+id/add_edit_text_product_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/description_edit_text_hint"
                    android:background="@drawable/edit_text_border"
                    android:textColor="@color/white"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:textColorHint="@color/white"
                    android:padding="8dp"
                    android:layout_marginBottom="8dp" />

                <!-- Error Label for Product Description -->
                <TextView
                    android:id="@+id/error_label_product_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone"
                    android:text="@string/error_invalid_description" />


                <!-- General Feedback TextView -->
                <TextView
                    android:id="@+id/general_feedback_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone"
                    android:text="@string/general_feedback"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp" />

                <!-- Buttons -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="24dp">

                    <!-- Cancel Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cancel_add_user_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel_btn_text"
                        android:backgroundTint="@color/cancel_background_btn_tint"
                        app:icon="@drawable/baseline_cancel_24"
                        app:iconGravity="start"
                        app:iconPadding="8dp" />

                    <Space
                        android:layout_width="16dp"
                        android:layout_height="wrap_content" />

                    <!-- Add Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/add_user_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="?attr/colorPrimary"
                        android:text="@string/add_btn_text"
                        app:icon="@drawable/baseline_add_24"
                        app:iconGravity="start"
                        app:iconPadding="8dp" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!-- NavigationView for Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view_add_user"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        android:background="@drawable/nav_view_border"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
