<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layoutDirection="ltr"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/lines">

        <!-- Toolbar at the top -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layoutDirection="ltr"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:id="@+id/searchBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editSearch"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_white"
                android:completionThreshold="1"
                android:drawableStart="@drawable/baseline_search_24"
                android:drawablePadding="15dp"
                android:hint="@string/search_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textDirection="ltr" />

        </LinearLayout>

        <!-- Button Group for List and Grid Layout -->
        <LinearLayout
            android:id="@+id/layoutSwitchGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchBarLayout">

            <ImageButton
                android:id="@+id/button_list_layout"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/switch_to_list"
                android:src="@drawable/baseline_view_list_24"
                app:tint="@android:color/white" />

            <ImageButton
                android:id="@+id/button_grid_layout"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/switch_to_grid"
                android:src="@drawable/baseline_grid_view_24"
                app:tint="@android:color/white" />

            <ImageButton
                android:id="@+id/button_deleteAll"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/delete_all"
                android:src="@drawable/baseline_delete_24"
                app:tint="@android:color/white" />

            <ImageButton
                android:id="@+id/button_deleteSelectedProducts"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/delete_selected_products"
                android:src="@drawable/baseline_delete_forever_24"
                app:tint="@android:color/white" />

            <!-- Spinner for sorting options -->
            <Spinner
                android:id="@+id/spinner_sort_options"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:background="@drawable/spinner_background"
                android:spinnerMode="dropdown"
                android:entries="@array/sort_options" />

        </LinearLayout>

        <!-- Centered ProgressBar -->
        <ProgressBar
            android:id="@+id/progressBarId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Centered ProgressBar -->
        <ProgressBar
            android:id="@+id/progressBarLoadingInitialUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/empty_results_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/empty_results_description"
                android:src="@drawable/baseline_search_off_24_white"
                android:visibility="gone" />

            <TextView
                android:id="@+id/empty_results_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:alpha="0.3"
                android:text="@string/no_search_results_found"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="36dp"
            app:layout_constraintTop_toBottomOf="@id/layoutSwitchGroup" />

        <LinearLayout
            android:id="@+id/pageInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_view"
            app:layout_constraintVertical_bias="0.285">


            <!-- "Prev" button on the left -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorPrimary"
                app:icon="@drawable/baseline_arrow_back_ios_24"
                app:iconGravity="start"
                app:iconPadding="8dp" />

            <!-- Spacer to push text views to the center -->
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- Centered text views -->
            <TextView
                android:id="@+id/current_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/page_separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/page_separator"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/total_pages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="16sp" />



            <!-- Spacer to push the "Prev" button to the right -->
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- "Next" button on the right -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorPrimary"
                app:icon="@drawable/baseline_arrow_forward_ios_24"
                app:iconGravity="end"
                app:iconPadding="8dp" />





        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="82dp"
            android:backgroundTint="@color/fab_btn_color"
            android:contentDescription="@string/fab_description"
            android:layoutDirection="rtl"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlayExtended"
            app:srcCompat="@drawable/baseline_add_24"
            app:tint="@android:color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@drawable/nav_view_border"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"/>

</androidx.drawerlayout.widget.DrawerLayout>
